<resources>

    <string name="app_name">FINd die Werwölfe</string>
    <string name="app_font">ELEGANT TYPEWRITER.ttf</string> Personal Use Only!!! 1001freefonts.com


    LoginRegistration
    <string name="clickToContinue">Tippe zum Fortfahren...</string>
    <string name="Welcome">Willkommen!</string>


    Menu
    <string name="start_game">Spiel starten</string>
    <string name="join_game">Spiel beitreten</string>
    <string name="settings">Einstellungen</string>
    <string name="logout">Logout</string>
    <string name="button_rules">Spielregeln</string>


    Settings
    <string name="button_deleteAccount">Account löschen</string>
    <string name="save">Speichern</string>
    <string name="chooseImage">Bild auswählen</string>


    Rules
    <string name="rules">Spielregeln</string>

    <string name="headline_rules">Spielprinzip</string>
    <string name="text_rules">\nDas kleine Dörfchen Düsterwald wird von Werwölfen heimgesucht. Bei Nacht sind sie blutrünstige Bestien - bei Tag
         tarnen sie sich als einfache Bürger. Die Bewohner von Düsterwald fürchten um ihr Leben und so muss entschieden werden, wer ein
         Werwolf sein könnte und zum Wohle der Gemeinschaft hingerichtet werden soll. Doch nicht immer trifft es einen Schuldigen und
          bis nicht alle Werwölfe aufgespührt und ausgelöscht wurden, wird jede Nacht ein weiterer Unschuldiger Bürger sterben - doch
          vorsicht: Manche im Dorf verfolgen ihre eigenen Ziele.</string>

    <string name="headline_characters">Charaktere\n</string>

    <string name="description_dorfbewohner">Die Dorfbewohner haben das Ziel, die Werwölfe auszurotten. Zu diesem Zweck beraten sie sich jeden Tag, um einen Wolf zu hängen. Leider trifft es nicht immer einen Schuldigen.</string>
    <string name="description_werwolf">Tagsüber tarnen sie sich als unschuldige Bürger und des Nachts zeigen sie ihr wahres Ich und rotten sich zusammen, um den Bürger zu verschlingen, der die größte Bedrohung für sie darstellt.
Erst wenn kein Bürger mehr am Leben ist, ziehen sie zum nächsten Dorf.</string>
    <string name="description_dieb">Ein Dorfbewohner bekommt ein verlockendes Angebot. Er kann sich eine neue Identität zulegen oder bleiben wie er ist.</string>
    <string name="description_amor">Amor kommt einmal zur Erde geflogen, um 2 Bürger zu erwählen, die sich unsterblich ineinander verliebn und jeweils mit dem anderen sterben. Hat Amor seine Pfeile verschossen, wird er zu einem ganz normalen Dorfbewohner.</string>
    <string name="description_seherin">Die Seherin befragt jede Nacht ihre Kristallkugel, um so zu erfahren, ob ein Bürger gut oder böse ist.</string>
    <string name="description_hexe">
        Die Hexe hat in ihrem Häuschen 2 Tränke zusammengebraut. Mit dem Gifttrank kann sie einmal ein Leben nehmen und mit ihrem Heiltrank kann sie einmal ein Opfer der Werwölfe vor dem Tode bewahren.</string>
    <string name="description_maedchen">Das Mädchen hat sich im Wald verlaufen und begegnet nachts den Werwölfen. Es muss vorsichtig sein und darf sich nicht erwischen lassen.</string>
    <string name="description_jaeger">
        Der Jäger verlässt das Haus nicht ohne sein Gewehr. Denn sollte er getötet werden, reißt er in seinem letzten Atemzug noch einen Bürger mit in den Tod.</string>


    Game Setup
    <string name="game_setup">Spieleinstellungen</string>
    <string name="game_settings">Spieleinstellungen</string>
    <string name="num_players">Spielerzahl</string>
    <string name="cardSelection">Kartenauswahl</string>
    <string name="cardWer">Werwölfe</string>
    <string name="cardJaeg">Jäger</string>
    <string name="cardSeh">Seherin</string>
    <string name="cardMaed">Mädchen</string>
    <string name="cardDie">Dieb</string>
    <string name="cardHex">Hexe</string>
    <string name="cardAmo">Amor</string>
    <string name="cardDor">Dorfbewohner</string>
    <string name="spinnerPrompt">Wähle die Anzahl der Werwölfe</string>


    StartGame
    <string name="explanation_QRCode">
        Bitte deine Mitspieler, folgenden Code zu scannen, um dem Spiel beizutreten.\n
        Wenn alle den Code gescannt haben, geht es weiter.
    </string>


    Join Game
    <string name="scanCode">Um einem Spiel beizutreten musst du den Code vom Spielersteller scannen. Bitte stelle vorher sicher, dass die App berechtigt ist, deine Kamera zu verwenden.</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    QR-Code
    <string name="joined">Bereits beigetreten:</string>
    <string name="backToMenu">Bist du sicher, dass du zum Menu zurückkehren möchtest? Das von dir erstellte Spiel wird dabei gelöscht.</string>

    GetRole
    <string name="ready">bereit</string>
    <string name="yourRole">Deine Rolle ist...</string>
    <string name="gettingReady">Die Dorfbewohner sammeln sich...</string>
    <string name="PlayerReady">sind bereit</string>


    Game
    <string name="ok">ok</string>
    <string name="info">[?]</string>

    <string name="stayDorfbewohner">Ich möchte Dorfbewohner bleiben!</string>
    <string name="newRole">Dieb, klaue dir eine Rolle ;)</string>
    <string name="becomeWolf">Die Gesetzeshüter sind dir dicht auf den Fersen. Um dem Gefängnis zu entfiehen mischt du dich unter die Werwölfe und bleibst unerkannt...</string>

    <string name="chooseLovers">Amor, wähle ein Liebespaar.</string>

    <string name="AufforderungSeherin">Seherin, wessen Identität möchtest du erfahren?</string>

    <string name="AufforderungJaeger">Dein Tod ist nahe doch mit deinem letztem Atemzug reißt du einen weiteren Dorfbewohner mit
        in den Tod. So wähle nun, wer mit dir sterben soll.</string>
    <string name="EndeJaeger"> wurde von dir mit in den Tod gerissen!</string>

    showVictim
    <string name="showNoVictimNight">Diese Nacht ist niemand gestorben!</string>
    <string name="showOneVictimNight">Hört die schreckliche Kunde, diese Nacht ist wieder jemand gestorben...</string>
    <string name="showTwoVictimsNight">Hört die schreckliche Kunde, diese Nacht ist mehr als ein Opfer von uns gegangen...</string>

    <string name="showNoVictimDay">Heute ist niemand gestorben!</string>
    <string name="showOneVictimDay">Ihr habt abgestimmt. Hingerichtet wird...</string>

    <string name="victimWas">war</string>
    <string name="shotByJaeger">wurde vom Jänger erschossen und war</string>
    <string name="victimLover">ist aus Liebe zu</string>
    <string name="victimLoverWas">gestorben und war</string>

    <string name="ExplanationTag">Diskutiert nun, wer nominiert werden soll. Wenn die meisten Spieler eine Person nomiert und ihre Wahl mit Betätigung
        des Bestätigen - Buttons bestätigt haben, bleibt den übrigen noch etwas Zeit um sich zu entscheiden. Wer nach Ablauf dieser Zeit keine Wahl getroffen
        hat, enthält sich somit automatisch. Anschließend werden die 3 Spieler mit den meisten Nominierungen zur Wahl gestellt. Der mit den
        meisten Stimmen nach dieser Wahl wird gehängt.</string>


</resources>
