<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soprowerwolf.Activities.RulesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline_rules"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/headline_rules"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_rules"
            android:layout_below="@+id/headline_rules"
            android:layout_centerHorizontal="true"
            android:text="@string/text_rules" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline_characters"
            android:layout_below="@+id/text_rules"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/headline_characters"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardHex"
            android:id="@+id/_hexe"
            android:layout_below="@+id/headline_characters"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/description_hexe"
            android:id="@+id/des_hexe"
            android:layout_below="@+id/_hexe"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Jäger"
            android:id="@+id/_jaeger"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/des_hexe"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/description_jaeger"
            android:id="@+id/des_jaeger"
            android:layout_below="@+id/_jaeger"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>
