<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/MainBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:longClickable="false"
    tools:context=".Activities.GameSetupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_settings"
        android:textSize="30dp"
        android:textColor="@color/werwoelfe"
        android:layout_centerHorizontal="true"
        android:id="@+id/spieleinstellungen" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startGame"
        android:layout_marginBottom="30dp"
        android:id="@+id/tableLayout"
        android:divider="@android:drawable/bottom_bar"
        android:dividerPadding="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardWer"
                android:id="@+id/textView2"
                android:layout_column="0" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerWer"
                android:layout_column="1"
                android:entries="@array/numbers"
                android:prompt="@string/spinnerPrompt"
                android:spinnerMode="dialog"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardAmo"
                android:id="@+id/textView5"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxAmo"
                android:layout_column="1"
                android:checked="true"
                android:buttonTint="@color/Buttons"
                android:onClick="calculateGame" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/cardJaeg"
                android:id="@+id/textView6"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxJaeg"
                android:layout_column="1"
                android:checked="true"
                android:onClick="calculateGame"
                android:buttonTint="@color/Buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/cardMaed"
                android:id="@+id/textView7"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxMaed"
                android:layout_column="1"
                android:checked="true"
                android:onClick="calculateGame"
                android:buttonTint="@color/Buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/cardDie"
                android:id="@+id/textView8"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxDie"
                android:layout_column="1"
                android:checked="true"
                android:onClick="calculateGame"
                android:buttonTint="@color/Buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/cardHex"
                android:id="@+id/textView9"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxHex"
                android:layout_column="1"
                android:checked="true"
                android:nestedScrollingEnabled="false"
                android:onClick="calculateGame"
                android:buttonTint="@color/Buttons"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Dorfbewohner    "
                android:id="@+id/textView10"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberDor"
                android:layout_column="1" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/start_game"
        android:id="@+id/startGame"
        android:backgroundTint="@color/Buttons"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardSelection"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_above="@+id/tableLayout"
        android:layout_marginBottom="10dp" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:divider="#3a1616"
        android:transitionGroup="false"
        android:onClick="calculateGame"
        android:layout_below="@+id/spieleinstellungen"
        android:layout_alignRight="@+id/spieleinstellungen"
        android:layout_alignEnd="@+id/spieleinstellungen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_players"
        android:id="@+id/spielerzahl"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/numberPicker"
        android:layout_toStartOf="@+id/numberPicker"
        android:layout_alignBottom="@+id/numberPicker"
        android:layout_alignTop="@+id/numberPicker" />

</RelativeLayout>
