<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.MenuActivity">

    <TextView
        android:id="@+id/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="#9f2626"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@android:style/Theme.Light" />

    <Button
        android:id="@+id/startGame"
        android:layout_below="@id/Heading"
        android:layout_centerHorizontal="true"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start_game"
        android:onClick="startGameSetup"
        />

    <Button
        android:id="@+id/joinGame"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startGame"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/join_game"
        android:onClick="startJoinGame"
        android:nestedScrollingEnabled="false" />

    <Button
        android:id="@+id/settings"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/settings"
        android:onClick="startSettings"
        android:layout_below="@+id/joinGame"
        android:layout_alignLeft="@+id/joinGame"
        android:layout_alignStart="@+id/joinGame" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account löschen"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="deleteAccount"/>

</RelativeLayout>
